[package]
name = "dyn_safe"
version = "0.0.1"  # Keep in sync (& also with `src/proc_macros/Cargo.toml`)
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"

documentation = "https://docs.rs/dyn_safe"
repository = "https://github.com/danielhenrymantilla/dyn_safe.rs"
homepage = "https://crates.io/crates/dyn_safe"

readme = "README.md"

description = "Take control of the Semver hazard of the `dyn` safety of your traits!"
keywords = [
    "semver",
    "dyn",
    "object",
    "safety",
    "safe",
]
categories = [
    "rust-patterns",
]

[dependencies.proc_macros]
version = "0.0.1"  # Keep in sync (& also with `src/proc_macros/Cargo.toml`)
path = "src/proc_macros"
package = "dyn_safe-proc_macros"

[workspace]
members = ["src/proc_macros"]
